Added Ruth's sentences about global data federations.

--- a/SnowmassStyle/Answers/computingF_answers.tex
+++ b/SnowmassStyle/Answers/computingF_answers.tex
@@ -72,6 +72,9 @@ behind.
 
 We still lead in worldwide distributed data management in a heterogeneous
 ensemble of independent computer centers.
+The growth in data  of the Energy Frontier, in aspects not needed by the standard bit streaming providers,  drives  continued investment in data management and data access methods. Continued evolution will be needed in order to take advantage of new network capabilities, ensure efficiency and robustness of the global data federations,  and contain the level of effort needed for operations.
+
+ 
 
 
 \subsection{COMF2}
