--- a/SnowmassStyle/driverT3.tex
+++ b/SnowmassStyle/driverT3.tex
@@ -28,6 +28,8 @@
 \usepackage{bm}       %    enables bold math symbols  e.g.  \bm{\gamma}
 \usepackage{graphicx}
 \usepackage{hyperref}      % hypertext links %%ARXIV
+\usepackage{color}
+\usepackage{amssymb,amsmath}
 
 \input workshopsymbols.tex      %   standard macros for common HEP terms
 
