edits in I4 re/ training and education

--- a/SnowmassStyle/CpF-I4/writeup.tex
+++ b/SnowmassStyle/CpF-I4/writeup.tex
@@ -667,8 +667,12 @@ physics - just as for instrumentation and electronics.
 Many universities have created, or are creating, computational
 science and/or research courses, often multi-disciplinary and some
 offered specifically as part of a domain science curriculum.
-An existing program to be viewed as a possible model is the Princeton
-University graduate computational certificate \cite{PUGRAD}.
+Existing programs known to the authors  include Indiana's PhD minor 
+in Scientific Computing ~\cite{IUGRAD} and the Princeton
+University graduate computational certificate ~\cite{PUGRAD}. 
+Such programs exist at many universities today and should be connected 
+as directly as possible into the needs of the particle and astro 
+physics programs.
 
 \begin{itemize}
 \item[] {\bf Recommendation:}  Encourage training as a continuing experimental activity
@@ -752,6 +756,7 @@ ability to repurpose and extend  existing software codes:
 \item LHC Data analysis workshops have been a great success and are a model that can be copied and ``regularized''
 \item CMS and ATLAS workbooks have resulted in new entrants being able to contribute quicker and more effectively.
 \item Coding scrums and fests have shown the ability for the best experts to influence a broad set of other developers.
+\item The simulation and theory communities have a long, successful history of tutorials and (summer) schools on various aspects of high performance computing ~\cite{HPCTraining}.
 \item Technical writers can increase the quality of the communication of information through contributing to the organization, review and testing of material.
 \end{itemize}
 
@@ -852,6 +857,9 @@ and who contributed many of the ideas presented here.
 \bibitem{KHANACAD} http://www.khanacademy.org
 \bibitem{GAIA} http://great.ast.cam.ac.uk/great-itn
 \bibitem{CHAINREDS} http://www.chain-project.eu/
+\bibitem{IUGRAD} http://denali.physics.indiana.edu/~sg/CSE/ 
+\bibitem{HPCTraining} For example see the XSEDE project course calendar at https://www.xsede.org/web/xup/course-calendar/ and the NCSA Blue Waters Virtual School of Computational Science and Engineering http://www.vscse.org/ 
+
 
 \end{thebibliography}
 
