some more fixes to eduaction and training

--- a/SnowmassStyle/CpF-I4/writeup.tex
+++ b/SnowmassStyle/CpF-I4/writeup.tex
@@ -74,15 +74,13 @@ techniques and as reengineering ``upgrades''
     \item Training
     \begin{itemize}
         \item Use certification to document expertise and encourage learning new skills
-        \item Encourage training as a continuing experimental activity
+        \item Encourage training in software and computing as a continuing physics activity
         \item Use mentors to spread scientific software development standards
         \item Involve computing professionals in the training of scientific domain experts
         \item Use online media to share training
         \item Use workbooks and wikis as evolving, interactive software documentation
         \item Provide young scientitsts with opportunities to learn computing and software skills that are marketable for non-academic jobs
     \end{itemize}
-
-
 
 \end{itemize}
 
@@ -675,7 +673,7 @@ as directly as possible into the needs of the particle and astro
 physics programs.
 
 \begin{itemize}
-\item[] {\bf Recommendation:}  Encourage training as a continuing experimental activity
+\item[] {\bf Recommendation:} Encourage training in software and computing as a continuing physics activity
 \end{itemize}
 
 We (at BaBar, Belle, Fermi, LEP, LHC, RHIC, SDSS, SLAC, Tevatron
