added Cosmic Frontier exec summary

--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -27,8 +27,7 @@
 \section{Summary}
 \label{sec:comp-summary}
 
-\section{Accelerator Science}
-
+\input Computing/E1-executiveSummary.tex
 \input Computing/T1-executiveSummary.tex
 
 \end{document}
