--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: I. Fisk, J. Shank} \end{large}
+\begin{large} {\bf Conveners: L. A. T. Bauerdick, S. Gottlieb} \end{large}
 
 J.~Smith, 
 
