--- a/SnowmassStyle/Computing/E1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E1-executiveSummary.tex
@@ -401,7 +401,7 @@ Cosmic Frontier community.
 
 \begin{center}
 \begin{table}
-\begin{tabular}{|l|c|c|c|} 
+\begin{tabular}{|l|r|r|r|} 
  \hline 
 {\bf Experimental Data} & 2013 & 2020 & 2030+ \\
 \hline
@@ -411,7 +411,8 @@ CPU hours & 3x10$^6$ hrs & $2\times 10^8$ hrs & $\sim 10^9$ hrs \\
 {\bf Simulations} &&& \\
 Storage & 1-10 PB & 10-100PB & $> 100$PB - 1EB\\
 Cores & 0.1-1M & 10-100M &$> 1$G\\
-CPU hours & 200M & $>$20G & $> 100$G
+CPU hours & 200M & $>$20G & $> 100$G\\
+\hline
 \label{tab:CompNeeds}
 \end{tabular}
 \caption{Compute needs in 10-20 years.}
