--- a/SnowmassStyle/Answers/computingF_answers.tex
+++ b/SnowmassStyle/Answers/computingF_answers.tex
@@ -136,12 +136,11 @@ Cosmic frontier simulation codes face a similar situation as with lattice QCD an
 
 The IF experiments share the need of continued development of common HEP tools like Geant4 and ROOT with the other frontiers.  In addition, the IF experiments will heavily benefit from the development of a data handling system that is easily distributed and has transparent access for the user.  The example of the tiered computing used by the LHC experiments is a good basis for developing the model for the IF.  It is expected that any solution developed would provide access to the data as well as methods for submitting jobs to the grid. Advances in adapting key software tools to exploit multi-threading and GPU environments will also be beneficial across frontiers. 
 
-While it may be true that leadership-class computers can run data-intensive jobs, there are significant design differences.  A single machine may be able to handle traditional HPC tasks and data-intensive tasks, but the architectures (and facilities) designed for number-crunching are very different from those designed for data-intensive analysis. The conventional supercomputer is a non-optimal device for data-intensive analysis (using various metrics: flops/byte, I/O, storage), while the data server is not optimal for HPC applications. And this is true even if both systems are based on the same "CPU".
+While leadership-class computers can run data-intensive jobs, there are significant design differences between a supercomputer designed for traditional HPC tasks and data-intensive computing system.  Architectures (and facilities) designed for number-crunching are very different from those designed for data-intensive analysis. As two extremes, in terms of metrics such as the flop/byte ratio, associated storage, and serial I/O performance, conventional supercomputers are not optimized for data-intensive analysis, while the data server is not optimal for HPC applications. This remains true even if both systems are based on the same "CPU".
 
-Judging from tests by ATLAS of running Geant, ROOT, and ALPGEN on the ANL "Intrepid" BlueGene/P, tightly-coupled leadership class systems such as those at the OLCF and at the ALCF can provide effective high throughput computing for experimental HEP.  However, this is not seen as their mission, as they were designed to give excellent performance on massively parallel codes (thousands to hundreds of thousands of processors per job).  Further, these facilities provide important tightly-coupled computing resources for a number of areas of HEP, including lattice QCD, cosmology, and accelerator simulation, and they are fully subscribed via the INCITE program.  Historically, the leadership class supercomputer centers have not been particularly data-friendly, important for high throughput computing, but this is changing rapidly with the realization that an ability to treat "big data" problems is vital.
+Judging from tests by ATLAS of running Geant, ROOT, and ALPGEN on the Argonne BlueGene/P, Intrepid, leadership class systems such as those at the ALCF, NERSC, and OLCF can provide effective high throughput computing for experimental HEP. Historically, due to their perceived mission and design, the leadership class supercomputer centers have not been particularly data-friendly, important for high throughput computing, but this situation is changing rapidly with the realization within DOE ASCR that an ability to treat "big data" problems is vital.
 
-In technology, HEP clusters used for high throughput computing and leadership class systems are converging.  Often the CPUs are the same, and the problems of poor utilization of CPU capabilities are common. Challenges such as "can we exploit GPUs effectively?" are are also common ground, but the highly capable intercommunications networks of leadership-class facilities remain largely irrelevant to experimental HEP while being vital to theoretical calculations.
-
+In technology, HEP clusters used for high throughput computing and leadership class systems are converging.  Often the CPUs are the same, and the problems of poor utilization of CPU capabilities are common; challenges such as "can we exploit GPUs effectively?" are are also common ground. High-speed networks central to HPC systems have so far not played an important role in HEP clusters used by experiments, although they have been used in other data-intensive platforms. This situation is evolving and even in the near future, a number of new designs for high-throughput computing are likely to become available. 
 
 \subsection{COMF4}
 
