Clarification of COMF5...

--- a/SnowmassStyle/Answers/computingF_answers.tex
+++ b/SnowmassStyle/Answers/computingF_answers.tex
@@ -156,7 +156,7 @@ storage depends on the capabilities of technology, the size and budget of
 the total project, and the physics lost by discarding data. There is no
 simple answer!
 
-\textcolor{red} {COM5 coming...}
+
 \subsection{COMF5}
  
  {\bf
@@ -165,7 +165,7 @@ theoretical simulations and data analysis -- to enable the extraction of new par
 physics information from astrophysical observations over the coming decade?}
 
 \textcolor{red}{
-{\bf Answer coming from Salman...}}
+{\bf Full answer will be in the Cosmic Frontier report. We will put a short summary here when that becomes available.}}
 
 
 
