Slight change in Leadership class facilities reference

--- a/SnowmassStyle/Answers/computingF_answers.tex
+++ b/SnowmassStyle/Answers/computingF_answers.tex
@@ -138,7 +138,7 @@ The IF experiments share the need of continued development of common HEP tools l
 
 While leadership-class computers can run data-intensive jobs, there are significant design differences between a supercomputer designed for traditional HPC tasks and data-intensive computing system.  Architectures (and facilities) designed for number-crunching are very different from those designed for data-intensive analysis. As two extremes, in terms of metrics such as the flop/byte ratio, associated storage, and serial I/O performance, conventional supercomputers are not optimized for data-intensive analysis, while the data server is not optimal for HPC applications. This remains true even if both systems are based on the same "CPU".
 
-Judging from tests by ATLAS of running Geant, ROOT, and ALPGEN on the Argonne BlueGene/P, Intrepid, leadership class systems such as those at the ALCF, NERSC, and OLCF can provide effective high throughput computing for experimental HEP. Historically, due to their perceived mission and design, the leadership class supercomputer centers have not been particularly data-friendly, important for high throughput computing, but this situation is changing rapidly with the realization within DOE ASCR that an ability to treat "big data" problems is vital.
+Judging from tests by ATLAS of running Geant, ROOT, and ALPGEN on the Argonne BlueGene/P, Intrepid, leadership class systems such as those at OLCF, ALCF, NERSC, and NSF centers can provide effective high throughput computing for experimental HEP. Historically, due to their perceived mission and design, the leadership class supercomputer centers have not been particularly data-friendly, important for high throughput computing, but this situation is changing rapidly with the realization within DOE ASCR that an ability to treat "big data" problems is vital.
 
 In technology, HEP clusters used for high throughput computing and leadership class systems are converging.  Often the CPUs are the same, and the problems of poor utilization of CPU capabilities are common; challenges such as "can we exploit GPUs effectively?" are are also common ground. High-speed networks central to HPC systems have so far not played an important role in HEP clusters used by experiments, although they have been used in other data-intensive platforms. This situation is evolving and even in the near future, a number of new designs for high-throughput computing are likely to become available. 
 
