Fix (partly) references

--- a/SnowmassStyle/CpF-I4/writeup.tex
+++ b/SnowmassStyle/CpF-I4/writeup.tex
@@ -846,10 +846,20 @@ and who contributed many of the ideas presented here.
 %F. A. Mesmer, Proc. Wien. Acad. Sci. {\bf 13}, 1564, 1593 (1762).
 %%CITATION = PWASA,13,1564;%%
 
-\bibitem{GAMEOVER} To fill in (or switch to bibtex, links clickable, see comments in latex)
+\bibitem{GAMEOVER} Samuel~H.~Fuller and Lynette~I.~Millett (Editors),
+  ``The Future of Computing Performance:  Game Over or Next Level?'', 
+  2011,
+  The National Academies Press.
+
 \bibitem{PUGRAD} http://www.princeton.edu/researchcomputing/education/graduate-certificate-CIS/
-\bibitem{ARCHWP} Elmer et al white paper submitted to Snowmass (reference to add after upload)
-\bibitem{FNALWP} Elvira et al (FNAL) white paper submitted to Snowmass (reference to add after upload)
+\bibitem{ARCHWP} P.~Elmer, S.~Rappoccio, K.~Stenson, P.~Wittich, 
+  ``The Need for an R\&D and Upgrade Program for CMS Software and Computing,'' 
+   (still to update with final arXiv number)
+\bibitem{FNALWP} 
+  P.~Canal, D.~Elvira, R.~Hatcher, S.~Y.~Jun and S.~Mrenna,
+  ``A Vision on the Status and Evolution of HEP Physics Software Tools,''
+  arXiv:1307.7452 [hep-ex].
+  %%CITATION = ARXIV:1307.7452;%%
 \bibitem{SLACWP} Makoto et al (SLAC) white paper submitted to Snowmass (reference to add after upload)
 \bibitem{TED} http://www.ted.com
 \bibitem{KHANACAD} http://www.khanacademy.org
