More updates to references.

--- a/SnowmassStyle/CpF-I4/writeup.tex
+++ b/SnowmassStyle/CpF-I4/writeup.tex
@@ -854,11 +854,11 @@ and who contributed many of the ideas presented here.
 \bibitem{PUGRAD} http://www.princeton.edu/researchcomputing/education/graduate-certificate-CIS/
 \bibitem{ARCHWP} P.~Elmer, S.~Rappoccio, K.~Stenson, P.~Wittich, 
   ``The Need for an R\&D and Upgrade Program for CMS Software and Computing,'' 
-   (still to update with final arXiv number)
+  arXiv:1308.1247 [hep-ex], SNOW13-00105.
 \bibitem{FNALWP} 
   P.~Canal, D.~Elvira, R.~Hatcher, S.~Y.~Jun and S.~Mrenna,
   ``A Vision on the Status and Evolution of HEP Physics Software Tools,''
-  arXiv:1307.7452 [hep-ex].
+  arXiv:1307.7452 [hep-ex], SNOW13-00083.
   %%CITATION = ARXIV:1307.7452;%%
 \bibitem{SLACWP} Makoto et al (SLAC) white paper submitted to Snowmass (reference to add after upload)
 \bibitem{TED} http://www.ted.com
