--- a/SnowmassStyle/CpF-I4/writeup.tex
+++ b/SnowmassStyle/CpF-I4/writeup.tex
@@ -852,7 +852,7 @@ and who contributed many of the ideas presented here.
   The National Academies Press.
 
 \bibitem{PUGRAD} http://www.princeton.edu/researchcomputing/education/graduate-certificate-CIS/
-\bibitem{ARCHWP} P.~Elmer, S.~Rappoccio, K.~Stenson, P.~Wittich, 
+\bibitem{ARCHWP} P.~Elmer, S.~Rappoccio, K.~Stenson and P.~Wittich, 
   ``The Need for an R\&D and Upgrade Program for CMS Software and Computing,'' 
   arXiv:1308.1247 [hep-ex], SNOW13-00105.
 \bibitem{FNALWP} 
@@ -860,12 +860,14 @@ and who contributed many of the ideas presented here.
   ``A Vision on the Status and Evolution of HEP Physics Software Tools,''
   arXiv:1307.7452 [hep-ex], SNOW13-00083.
   %%CITATION = ARXIV:1307.7452;%%
-\bibitem{SLACWP} Makoto et al (SLAC) white paper submitted to Snowmass (reference to add after upload)
+\bibitem{SLACWP} M.~Asai and R.~Mount, 
+   ``Geant4 - Current and Future: A Snowmass 2013 White Paper,''
+  arXiv:1308.1994 [hep-ex], SNOW13-00111.
 \bibitem{TED} http://www.ted.com
 \bibitem{KHANACAD} http://www.khanacademy.org
 \bibitem{GAIA} http://great.ast.cam.ac.uk/great-itn
 \bibitem{CHAINREDS} http://www.chain-project.eu/
-\bibitem{IUGRAD} http://denali.physics.indiana.edu/~sg/CSE/ 
+\bibitem{IUGRAD} http://denali.physics.indiana.edu/{\textasciitilde{}}sg/CSE/ 
 \bibitem{HPCTraining} For example see the XSEDE project course calendar at https://www.xsede.org/web/xup/course-calendar/ and the NCSA Blue Waters Virtual School of Computational Science and Engineering http://www.vscse.org/ 
 
 
